z-index fix for api search

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -486,7 +486,7 @@ input[type="text"] {
         display: block;
         width: calc(100% - 30px);
         top: 60px;
-        z-index: 9;
+        z-index: 8;
     }
 }
 
